--- a/profilePage/index.html
+++ b/profilePage/index.html
@@ -28,8 +28,8 @@
                 <input type="text" id="newpassword" placeholder="New Password">
                 <input type="text" id="confirmPassword" placeholder="Confirm Password">
                 
-                <button type="submit"  id="changePassword">Change Password</button>
-                <button type="submit"  id="logoutBtn">Logout</button>
+                <button id="changePassword">Change Password</button>
+                <button id="logoutBtn">Logout</button>
             </div>
         </form>
     </main>
